# RealMonteCarlo

./: CMakeLists.txt  config.yaml
include/: Board.h  Explorer.h  Node.h  SearchTree.h
src/: Board.cpp  Explorer.cpp  Node.cpp  SearchTree.cpp  main.cpp
